--- a/项目管理/支付路由.MD
+++ b/项目管理/支付路由.MD
@@ -13,15 +13,40 @@
 
 # 业务
 
+* 风控
+
+  * 反洗钱
+  * 反欺诈
+
 * 绑卡
+
+  * 协议支付签约绑卡
+
 * 清算
-* 对账文件
+  * 对账
+
+    > 1、支付渠道
+    >
+    > 2、资金渠道
+    >
+    > 3、供货商
+    >
+    > 4、用户
+
+* 会记科目
+
 * 代收
+
 * 代付 
   * 对私代付
   * 对公代付
-* 代扣还款
-* 代扣保费
+
+* 代扣
+
+  * 协议支付还款代扣
+  * 协议支付保费代扣
+  * 协议支付其他费用代扣
+
 * 协议支付
   * 协议支付签约流程![img](https://ss1.baidu.com/6ONXsjip0QIZ8tyhnq/it/u=744210922,2100934061&fm=173&app=25&f=JPEG?w=640&h=143&s=6C84A61ACD3AE4035C4830DA0200B0F3)
   * 协议支付流程
@@ -77,8 +102,6 @@
 * 费用
 
 * 渠道支持银行卡列表
-
-  
 
 * 
 
@@ -176,7 +199,11 @@
 
 * 系统的输入与输出
 
+  >对于任何一个系统设计而言，首先需要明确系统的边界在哪里。支付路由可以简化为公式：y=f(x).其中y =支付方案，x =支付请求。
   >
+  >支付请求：支付请求包括需要执行的支付金额，使用的银行卡，以及对应的产品。举例：(张三，银行卡A, 充值, 2000元)。 这是一个典型的投资者行为。张三在有一张绑定的银行卡A, 希望投资充值2000元。复杂一点的, (李四，银行卡A, 银行卡B, 代扣，7000元)。对应的业务可能是李四是借款人，登记了银行卡A和银行卡B，期望这次还他的贷款7000元。
+  >
+  >支付方案：支付方案包括支付金额，使用的银行卡，渠道。对应支付请求中的例子。可能是：(张三， 银行卡A, 2000元，连连支付)。于是张三手机上收到连连支付发送给他的短信验证码。对应第二个例子复杂一点, 结果是: [(李四，银行卡A, 3000元， 宝付支付), (李四，银行B, 2000元，网易支付), (李四，银行卡B, 2000元，网易支付)]。表示这里会执行三次代扣，分别是通过宝付在银行卡A扣款3000元，通过网易在银行卡B分别扣款2000元
 
 * 路由业务
 
