--- a/项目管理/项目技术管理.md
+++ b/项目管理/项目技术管理.md
@@ -1,1 +1,72 @@
-## app端埋点方案
+#### 术语定义
+
+| 符号 | 符号性质             | 符号说明                           |
+| ---- | -------------------- | ---------------------------------- |
+| M    | 强制域(Mandatory)    | 必须填写的域                       |
+| C    | 条件域(Conditional)  | 某条件成立时必须填写的域           |
+| O    | 选用域(Optional)     | 选填属性（可选预）                 |
+| R    | 原样返回域(Returned) | 必须与先前报文中对应域的值相同的域 |
+
+  
+
+#### 接口开发说明
+
+> 金额统一单位：分（Long类型）
+>
+> 商户   n:n  产品 
+>
+> 密钥方式：RSA、MD5签名
+>
+
+
+
+#### 内部服务间调用
+
+* 支持的请求入参
+
+* 统一异常处理
+
+  * 业务异常
+  * 系统异常
+
+* 统一响应
+
+  
+
+
+
+#### 对外公共接口
+
+> 第三方或者app等外部请求
+
+| 参数名称     | 参数含义           | 出现要求 | 参数备注                                                     |
+| ------------ | ------------------ | -------- | ------------------------------------------------------------ |
+| member_id    | 商户号             | M        | 商户签约后A公司提供给商户的唯一编号例 member_id=100000178    |
+| terminal_id  | 终端号             | M        | 商户签约后A公司提供给商户，交易时必要的参数例terminal_id=100000859 |
+| data_type    | 数据类型           | M        | data_type=xml 或 json                                        |
+| data_content | 请求报文（加密串） |          | 证书加密                                                     |
+| version      | 版本号             | M        | 4.0.0                                                        |
+
+
+
+#### 第三方接口
+
+* 成功
+* 失败
+* 未知（调用超时、502bad gateway等情况）
+
+
+
+#### 数据模型
+
+
+
+
+
+
+
+服务出现异常，需要有应急方案
+
+1、补偿机制
+
+2、重试机制
